# colcon-cargo

./: .gitignore  .travis.yml  README.md  README.rst  appveyor.yml  setup.cfg  setup.py  stdeb.cfg
.github/workflows/: ci.yaml  ci.yml
colcon_cargo/: __init__.py
colcon_cargo/argcomplete_completer/: cargo_args.py
colcon_cargo/package_augmentation/: cargo.py
colcon_cargo/package_discovery/: cargo_workspace.py
colcon_cargo/package_identification/: cargo.py  cargo_workspace.py
colcon_cargo/task/cargo/: __init__.py  build.py  test.py
scripts/: build-rust-package.sh  install-prereqs.sh
test/: spell_check.words  test_build.py  test_copyright_license.py  test_flake8.py  test_spell_check.py
test/rust-pure-library/: Cargo.toml
test/rust-pure-library/src/: lib.rs
test/rust-sample-package/: Cargo.toml
test/rust-sample-package/src/: lib.rs  main.rs
test/rust-workspace/: Cargo.toml
test/rust-workspace/additional-package/: Cargo.toml
test/rust-workspace/workspace-member/: Cargo.toml
