[metadata]
name = colcon-cargo
version = attr: colcon_cargo.__version__
author = Gérald Lelong
author_email = gerald.lelong@easymov.fr
maintainer = Easymov Robotics
maintainer_email = dev@easymov.fr
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to support cargo packages.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core
  # to set an environment variable when a package installs a library
  colcon-library-path
  toml
packages = find:
tests_require =
  flake8
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
zip_safe = true

[options.entry_points]
colcon_argcomplete.argcomplete_completer =
    cargo_args = colcon_cargo.argcomplete_completer.cargo_args:CargoArgcompleteCompleter
colcon_core.package_identification =
    cargo = colcon_cargo.package_identification.cargo:CargoPackageIdentification
colcon_core.task.build =
    cargo = colcon_cargo.task.cargo.build:CargoBuildTask
colcon_core.task.test =
    cargo = colcon_cargo.task.cargo.test:CargoTestTask

[flake8]
import-order-style = google
