[package]
name = "rust-sample-package"
version = "0.1.0"
authors = ["Nikos Koukis <nickkouk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-rust-pure-library = {package = "rust-pure-library", path = "../rust-pure-library"}

[dev-dependencies]
tempdir = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = "0.59"
